k8s-resource/demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
  selector:
    app: demo
---
apiVersion: v1
kind: Service
metadata:
  name: demo2-service
  labels:
    app: demo2
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: http
  selector:
    app: demo2
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-v1
  labels:
    app: demo
    version: v1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: demo
        version: v1
    spec:
      containers:
      - name: webserver
        image: alexwang2020/alex
        resources:
          limits:
            cpu: "500m"
            memory: "1000Mi"
          requests:
            cpu: "100m"
            memory: "500Mi"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-v2
  labels:
    app: demo2
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo2
        version: v2
    spec:
      containers:
      - name: webserver
        image: alexwang2020/alex
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
