k8s-resource/test-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: / # only work
        backend:
          serviceName: demo2-service
          servicePort: 8080
      # - path: /testpath # not work for /testpath. not kown why
      #   backend:
      #     serviceName: demo2-service
      #     servicePort: 8080
